--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
   "dependencies": {
     "@aws-sdk/client-s3": "^3.826.0",
     "@clerk/nextjs": "^6.21.0",
+    "@elevenlabs/elevenlabs-js": "^2.3.0",
     "@hedgedoc/html-to-react": "^2.1.1",
     "@hookform/resolvers": "^5.1.0",
     "@prisma/client": "^6.9.0",
     "@radix-ui/react-dropdown-menu": "^2.1.15",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-separator": "^1.1.7",
+    "@radix-ui/react-slider": "^1.3.5",
     "@radix-ui/react-slot": "^1.2.3",
     "@tiptap/extension-blockquote": "^2.14.0",
     "@tiptap/extension-code": "^2.14.0",
